tests/macros/plugin/extension.rs
fn main() {
    let q = inquisition::questions![plugin { extension: todo!() }];
}
